# makelife-hard

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-04-01-kicad-design-blocks-library-design.md
hardware/makelife-main/: makelife-main.kicad_pro
tools/: kibot.yaml  validate_drc.py
