[project]
name = "makelife-hard"
version = "0.1.0"
description = "Electronic hardware design — KiCad, SPICE, DRC/ERC validation"
requires-python = ">=3.12"
dependencies = [
    "kibot>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
